<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/debugger_fragment_label_padding" >

        <android.support.v7.widget.CardView
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Application name -->
                <TextView
                    android:id="@+id/application_name_label"
                    style="@style/label"
                    android:paddingTop="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_name_label" />
                <TextView
                    android:id="@+id/application_name"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_label" />


                <!-- Max players -->
                <TextView
                    android:id="@+id/max_players_label"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_players_label" />
                <TextView
                    android:id="@+id/max_players"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_label" />



                <!-- Gameplay state -->
                <TextView
                    android:id="@+id/gameplay_state_label"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameplay_state_label" />
                <TextView
                    android:id="@+id/gameplay_state"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameplay_state_unknown" />


                <!-- Lobby state -->
                <TextView
                    android:id="@+id/lobby_state_label"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lobby_state_label" />
                <TextView
                    android:id="@+id/lobby_state"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lobby_state_unknown" />




                <!-- Game status text -->
                <TextView
                    android:id="@+id/game_status_text_label"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_status_text_label" />
                <TextView
                    android:id="@+id/game_status_text"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <!-- Game data -->
                <TextView
                    android:id="@+id/game_data_label"
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_data_label" />
                <TextView
                    android:id="@+id/game_data"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!-- Players -->
        <Button
            android:id="@+id/button_add_player"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/debugger_fragment_label_vertical_spacing"
            android:text="@string/button_add_player" />
        <ListView
            android:id="@+id/player_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/player_element" />

        <!-- Last game message -->
        <android.support.v7.widget.CardView
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/last_game_message_label"
                    style="@style/label"
                    android:paddingTop="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_game_message_label" />
                <TextView
                    android:id="@+id/last_game_message_player_id"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/last_game_message"
                    style="@style/label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Disconnect button-->
        <Button
            android:id="@+id/button_disconnect"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_disconnect" />
    </LinearLayout>
</ScrollView>
